fixed the contact me bar to fit better on mobile

--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ body {
 @media (max-width: 768px) {
     .contact-list {
         display: grid;
-        grid-template-columns: repeat(3, minmax(100px, 1fr));
+        grid-template-columns: repeat(2, minmax(100px, 1fr));
         grid-gap: 20px;
         margin-top: 50px;
     }
@@ -426,6 +426,7 @@ body {
     display: block;
     text-align: center;
     font-size: 40px;
+    text-decoration: none;
 }
 
 .contact-list a:hover{
